Frontend done + Fixed so many bugs
